# GDG-Hackathon

./: .gitignore  DEBUG_REPORT.md  DEMO_DATA_TWO_SETS.txt  DEMO_FORM_DATA.txt  DEMO_WALKTHROUGH_2MIN50.txt  DEMO_WALKTHROUGH_3MIN.txt  NexusAI_Pitch_Deck.pptx  README.md  package-lock.json  package.json  pyproject.toml  seed.sh  tsconfig.json  tsconfig.tsbuildinfo
.next/: app-build-manifest.json  prerender-manifest.json  trace
.next/server/: app-paths-manifest.json  webpack-runtime.js
app/: globals.css  layout.tsx
backend/: .env.example  README.md  STEP.md  agent.py  docs.txt  pyproject.toml  requirements.txt
backend/app/: config.py  main.py  models.py  routes.py
backend/app/bq/: schema.sql  vector_index.sql
backend/app/services/: bigquery_graph.py  bigquery_vector.py  vertex_embeddings.py  vertex_search.py
backend/data/: nexusai-dev.db
backend/data/spanner_ddl/: graph.sql
backend/nexusai/: __init__.py  api.py  cli.py  config.py  database.py  dev.py  dev_main.py  main.py  matching.py
backend/nexusai/agents/: graph.py  state.py
backend/nexusai/agents/nodes/: analytics_agent.py  general_agent.py  matching_agent.py  outcome_agent.py  profile_agent.py  router.py
backend/nexusai/mcp/: __init__.py  spanner_graph.py
backend/nexusai/security/: audit.py  dependencies.py  google_oauth.py  jwt.py  rbac.py
backend/nexusai/services/: ai.py  bigquery.py  email.py  graph.py  ical.py  mcp.py  translation.py  vector.py
backend/nexusai_mvp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
backend/scripts/: build_vectors_jsonl.py  extract-originals.js  generate_demo_upload_assets.py  init_db.py  load_vectors.py  reindex_profiles.py  seed_current_api.py
backend/tests/: test_api_flow.py  test_config.py  test_local_dev_runtime.py  test_media_uploads.py  test_production_hardening.py  test_stress.py
components/: admin-dashboard.tsx
frontend/: .env.local  package-lock.json  package.json  tsconfig.tsbuildinfo
lib/: api.ts
nexusai/: api.py  config.py  database.py
nexusai/mcp/: registry.py
nexusai/services/: __init__.py  ai.py  vector.py
nexusai_mvp.egg-info/: requires.txt
scripts/: extract-source.js  init_db.py  restore-sources.js  seed_demo.py
src/app/: globals.css  layout.tsx
src/components/: admin-dashboard.tsx
tests/: test_api_flow.py  test_matching.py  test_mcp_registry.py
web_backend/: .env.example  package.json  pnpm-lock.yaml  server.ts
(+124 files in other folders)
