[project]
name = "nexusai-mvp"
version = "0.1.0"
description = "NexusAI Vertex AI + MCP MVP for ecosystem matching"
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "uvicorn",
    "sqlalchemy",
    "psycopg[binary]",
    "pydantic>=2",
    "pydantic-settings",
    "python-multipart",
    "google-cloud-aiplatform",
    "google-cloud-bigquery",
    "google-cloud-spanner",
    "google-cloud-translate",
    "python-dotenv",
]

[project.scripts]
nexusai-agent = "agent:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"
