[project]
name = "nexusai-mvp"
version = "0.1.0"
description = "NexusAI Vertex AI + MCP MVP for ecosystem matching"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "cloud-sql-python-connector[pg8000]>=1.18",
    "alembic>=1.14",
    "pydantic>=2",
    "pydantic-settings>=2.6",
    "python-multipart>=0.0.12",
    "python-dotenv>=1.0",
    "python-certifi-win32>=1.6",
    "google-auth>=2.36",
    "google-cloud-aiplatform>=1.75",
    "google-cloud-bigquery>=3.27",
    "google-cloud-spanner>=3.51",
    "google-cloud-translate>=3.18",
    "google-cloud-documentai>=3.0",
    "google-cloud-speech>=2.29",
    "langgraph>=0.2.60",
    "langgraph-checkpoint-postgres>=2.0",
    "langchain-google-vertexai>=2.0",
    "mcp>=1.2",
    "httpx>=0.28",
    "sse-starlette>=2.1",
    "pyjwt[crypto]>=2.9",
    "slowapi>=0.1.9",
]

[project.scripts]
nexusai-agent = "agent:main"
nexusai-api = "nexusai.cli:run_api"
nexusai-init-db = "nexusai.cli:init_db"
nexusai-seed-demo = "nexusai.cli:seed_demo"

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "mypy>=1.13",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = false

[tool.setuptools.packages.find]
include = ["nexusai*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
